k8s/my-app.Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-nextjs-app-svc
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: my-nextjs-app
    app.kubernetes.io/name: my-nextjs-app
  ports:
  - name: http
    protocol: TCP
    port: 3000
    targetPort: 3000
  sessionAffinity: None
