k8s/my-app.Route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: my-nextjs-app-svc
spec:
  tls:
    termination: edge
  to:
    name: my-nextjs-app-svc
    kind: Service
    weight: 100
  wildcardPolicy: None
